# Voice-Agent-MVP

./: .env.example  .gitignore  README.md  docker-compose.yml
docs/: ai-pipeline.md  (+12 more)
services/api/: Dockerfile  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial_schema.py
services/api/app/: main.py
services/api/app/api/: router.py
services/api/app/api/routes/: admin.py  auth.py  calls.py  customers.py  dashboard.py  health.py  metrics.py  providers.py  transcripts.py  voice.py
services/api/app/auth/: jwt.py
services/api/app/config/: settings.py
services/api/app/context/: builder.py
services/api/app/core/: dependencies.py  errors.py
services/api/app/db/: base.py  session.py
services/api/app/logging/: setup.py
services/api/app/memory/: store.py
services/api/app/middleware/: correlation.py  rate_limit.py  request_logging.py
services/api/app/models/: __init__.py  domain.py
services/api/app/observability/: metrics.py
services/api/app/providers/: errors.py  factory.py  mock.py  retry.py
services/api/app/providers/llm/: base.py  claude.py  deepseek.py  gemini.py  gpt.py  groq.py  local_vllm.py  openrouter.py
services/api/app/providers/stt/: assemblyai.py  base.py  deepgram.py  faster_whisper.py  groq.py  groq_http.py  whisper.py  whisper_api.py
services/api/app/repositories/: voice.py
services/api/app/schemas/: auth.py  voice.py
services/api/app/tools/: base.py  registry.py
services/api/app/voice/: conversation.py  orchestrator.py
services/dograh/: Dockerfile  pyproject.toml
services/dograh/app/: main.py
(+53 files in other folders)
