[project]
name = "voxagent-api"
version = "0.1.0"
description = "Provider-agnostic AI voice platform API foundation"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "fastapi>=0.111.0",
  "email-validator>=2.2.0",
  "greenlet>=3.0.3",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.3.4",
  "python-multipart>=0.0.9",
  "python-json-logger>=2.0.7",
  "pyjwt>=2.8.0",
  "redis>=5.0.7",
  "sqlalchemy[asyncio]>=2.0.31",
  "uvicorn[standard]>=0.30.1",
]

[project.optional-dependencies]
dev = [
  "black>=24.4.2",
  "pytest>=8.2.2",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["E501"]
